--- a/Backoffice/src/main/resources/application.properties
+++ b/Backoffice/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.url=jdbc:postgresql://pgdb:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=riovas
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.http.multipart.max-file-size=1MB
+spring.http.multipart.max-request-size=1MB
