--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 services:
     restservicemobile:
         build:
-            context: .
+            context: ./Mobile
             dockerfile: ./restserviceMobile.dockerfile
         ports:
           - "8084:8082"
@@ -16,21 +16,22 @@ services:
 
     restservicebackoffice:
         build:
-            context: .
+            context: ./Backoffice
             dockerfile: ./restserviceBackoffice.dockerfile
         ports:
           - "8083:8082"
         networks:
           - isolated_nw2
         volumes:
-          - /tmp
+          - ./Backoffice/img:/app/img
+        working_dir: /app
         container_name: restserviceBackoffice
         depends_on:
           - pgdb
 
     restserviceplayer:
         build:
-            context: .
+            context: ./Player
             dockerfile: ./restservicePlayer.dockerfile
         ports:
           - "8082:8082"
