Revert "garde fou pagination"
This reverts commit 284ac59d7f5dd588f10cc7712346f801c8f3f237.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
           - "8084:8082"
         networks:
           - isolated_nw2
+        volumes:
+          - /tmp
         container_name: restserviceMobile
         depends_on:
           - pgdb
@@ -35,6 +37,8 @@ services:
           - "8082:8082"
         networks:
           - isolated_nw2
+        volumes:
+          - /tmp
         container_name: restservicePlayer
         depends_on:
           - pgdb
